--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets/img/fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="assets/css/vanilla-dataTables.min.css" rel="stylesheet">
     <link href="assets/css/styles.css" rel="stylesheet">
+    <link href="assets/css/docs.css" rel="stylesheet">
     <title>Lavanderia</title>
 </head>
 
@@ -45,22 +49,45 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav w-100 mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="historico.html">Histórico</a>
+                            <a class="nav-link active" aria-current="page" href="#"></a>
                         </li>
                         <!-- <li class="nav-item">
-                            <a class="nav-link" href="#" data-bs-backdrop="static" data-bs-keyboard="false"
-                                data-bs-toggle="modal" data-bs-target="#modalSearch">Buscar</a>
-                        </li> -->
-                        <!-- <li class="nav-item ms-auto">
-                            <a class="nav-link" href="#">Salir</a>
+                            <a class="nav-link" href="historico.html">Histórico</a>
                         </li> -->
                     </ul>
                 </div>
             </div>
         </nav>
+        <nav aria-label="Page navigation letras">
+            <ul class="pagination pagination-sm justify-content-center flex-wrap">
+                <li class="page-item"><a href="javascript:void(0)" class="page-link getPage-A">A</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-B">B</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-C">C</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-D">D</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-E">E</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-F">F</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-G">G</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-H">H</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-I">I</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-J">J</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-K">K</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-L">L</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-M">M</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-N">N</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-O">O</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-P">P</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-Q">Q</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-R">R</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-S">S</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-T">T</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-U">U</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-V">V</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-W">W</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-X">X</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-Y">Y</a></li>
+				<li class="page-item"><a href="javascript:void(0)" class="page-link getPage-Z">Z</a></li>
+            </ul>
+          </nav>
         <!-- Buscar registro -->
         <div class="modal fade" id="modalSearch" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false" aria-hidden="true">
             <div class="modal-dialog">
@@ -138,40 +165,63 @@
             </div>
         </div>
         <!-- Agregar registro -->
+        <!-- Modal Song -->
+        <div class="modal" id="modalSong" tabindex="-1">
+            <div class="modal-dialog modal-fullscreen">
+              <div class="modal-content">
+                <div class="modal-header text-center">
+                  <h5 class="modal-title w-100">Modal title</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid bd-example-row">
+                      <div class="row">
+                        <div class="col-md-4">.col-md-4</div>
+                        <div class="col-md-4 ms-auto">.col-md-4 .ms-auto</div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-3 ms-auto">.col-md-3 .ms-auto</div>
+                        <div class="col-md-2 ms-auto">.col-md-2 .ms-auto</div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-6 ms-auto">.col-md-6 .ms-auto</div>
+                      </div>
+                      <div class="row">
+                        <div class="col-sm-9">
+                          Level 1: .col-sm-9
+                          <div class="row">
+                            <div class="col-8 col-sm-6">
+                              Level 2: .col-8 .col-sm-6
+                            </div>
+                            <div class="col-4 col-sm-6">
+                              Level 2: .col-4 .col-sm-6
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+        <!-- Modal Song -->
         <div class="contButtons">
             <!-- <button type="button" class="btn btn-primary btn-lg searchClient" href="#" data-bs-backdrop="static" data-bs-keyboard="false"
             data-bs-toggle="modal" data-bs-target="#modalSearch"><i class="fa fa-search mb-2" aria-hidden="true"></i></button> -->
-            <button type="button" class="btn btn-success btn-lg addClient" href="#" data-bs-backdrop="static" data-bs-keyboard="false"
-            data-bs-toggle="modal" data-bs-target="#modalAdd"><i class="fa fa-plus" aria-hidden="true"></i></button>
+            <button type="button" class="btn btn-success btn-lg" href="#" data-bs-backdrop="static" data-bs-keyboard="false"
+            data-bs-toggle="modal" data-bs-target="#modalSong"><i class="fa fa-plus" aria-hidden="true"></i></button>
         </div>
     </header>
     <main class="container mt-4">
         <section class="row">
-            <div class="dashboard d-flex justify-content-evenly flex-wrap col-12">
-                <div class="col-3 card text-white fw-bolder bg-success mb-3 shadow-lg" style="max-width: 18rem;">
-                    <div class="card-header text-uppercase">Entregados</div>
-                    <div class="card-body text-center">
-                        <h5 class="card-title fw-bolder display-5 entregadosWid">#</h5>
-                        <p class="card-text display-4 fw-light"><i class="fa fa-check" aria-hidden="true"></i></p>
-                    </div>
-                </div>
-                <div class="col-3 card text-dark fw-bolder bg-warning mb-3 shadow-lg" style="max-width: 18rem;">
-                    <div class="card-header text-uppercase">Pendientes</div>
-                    <div class="card-body text-center">
-                        <h5 class="card-title fw-bolder display-5 pendientesWid">#</h5>
-                        <p class="card-text display-4 fw-light"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></p>
-                    </div>
-                </div>
-                <div class="col-3 card text-white fw-bolder bg-danger mb-3 shadow-lg" style="max-width: 18rem;">
-                    <div class="card-header text-uppercase"> No entregados</div>
-                    <div class="card-body text-center">
-                        <h5 class="card-title fw-bolder display-5 faltantesWid">#</h5>
-                        <p class="card-text display-4 fw-light"><i class="fa fa-times" aria-hidden="true"></i></p>
-                    </div>
-                </div>
-            </div>
             <div class="tableContent">
             </div>
+			
         </section>
     </main>
     <!-- Optional JavaScript; choose one of the two! -->
