--- a/index.html
+++ b/index.html
@@ -38,22 +38,14 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">
+				<a class="navbar-brand mx-auto" href="#">
 					<img src="assets/img/fav/favicon-32x32.png" alt="">
 				</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-					data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-					aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav w-100 mb-2 mb-lg-0">
 						<li class="nav-item">
 							<a class="nav-link active" aria-current="page" href="#"></a>
 						</li>
-						<!-- <li class="nav-item">
-                            <a class="nav-link" href="historico.html">Histórico</a>
-                        </li> -->
 					</ul>
 				</div>
 			</div>
@@ -95,12 +87,16 @@
 				<div class="modal-content">
 					<div class="modal-header text-center">
 						<h5 class="modal-title w-100">Hossana</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						<button type="button" class="btn-close btn-stop" data-bs-dismiss="modal" aria-label="Close"></button>
 					</div>
 					<div class="modal-body">
+						<audio autoplay preload="auto">
+							<source src="assets/song/146.mp3" type="audio/mpeg">
+							No es compatible con AUDIO en HTML
+						  </audio>
 						<div class="container-fluid bd-example-row">
 							<div class="row">
-								<div class="col-6">
+								<div class="col-md-6">
 									<div class="card text-dark bg-light mb-3">
 										<div class="card-header intro">Intro</div>
 										<div class="card-body text-secondary">
@@ -109,111 +105,111 @@
 										</div>
 									</div>
 								</div>
-								<div class="col-6">
-									<div class="card text-dark bg-light  mb-3">
+								<div class="col-lg-6">
+									<div class="card text-dark bg-light mb-3">
 										<div class="card-header">Verso 1</div>
 										<div class="card-body text-secondary">
 											<!-- <h5 class="card-title">Secondary card title</h5> -->
 											<div class="card-text">
-												<p>
+												<h5>
 													<tn>Bm</tn>
 													<tn>A</tn>
 													<tn>D/F#</tn>
 													<tn>G</tn>
-												</p>
+												</h5>
 												<p>Levantamos un clamor, por sanidad y redención</p>
-												<p>
+												<h5>
 													<tn>Bm</tn>
 													<tn>A</tn>
 													<tn>D/F#</tn>
 													<tn>G</tn>
-												</p>
+												</h5>
 												<p>Muéstranos lo que tu ves, los secretos de tu corazón</p>
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="col-6">
-									<div class="card text-dark bg-light  mb-3">
+								<div class="col-lg-6">
+									<div class="card text-dark bg-light mb-3">
 										<div class="card-header">Verso 2</div>
 										<div class="card-body text-secondary">
 											<div class="card-text">
-												<p>
+												<h5>
 													<tn>Bm</tn>
 													<tn>A</tn>
 													<tn>D/F#</tn>
 													<tn>G</tn>
-												</p>
+												</h5>
 												<p> Un pueblo unido pide hoy, Tu libertad y salvación</p>
-												<p>
+												<h5>
 													<tn>Bm</tn>
 													<tn>A</tn>
 													<tn>D/F#</tn>
 													<tn>G</tn>
-												</p>
+												</h5>
 												<p> Ármanos con tu valor, lo que deseamos es revolución</p>
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="col-6">
-									<div class="card text-dark bg-light  mb-3">
+								<div class="col-lg-6">
+									<div class="card text-dark bg-light mb-3">
 										<div class="card-header">Pre</div>
 										<div class="card-body text-secondary">
 											<div class="card-text">
-												<p>
+												<h5>
 													<tn>G</tn>
 													<tn>A</tn>
 													<tn>Bm</tn>
-												</p>
+												</h5>
 												<p> Que el cielo se parta en dos... inúndanos</p>
-												<p>
+												<h5>
 													<tn>G</tn>
 													<tn>A</tn>
 													<tn>Bm</tn>
-												</p>
+												</h5>
 												<p> En el desierto broten ríos... vida sopla hoy</p>
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="col-6">
-									<div class="card text-dark bg-light  mb-3">
+								<div class="col-lg-6">
+									<div class="card text-dark bg-light mb-3">
 										<div class="card-header">Coro</div>
 										<div class="card-body text-secondary">
 											<div class="card-text">
-												<p>
+												<h5>
 													<tn>Bm</tn>
 													<tn>D</tn>
 													<tn>Em</tn>
-												</p>
+												</h5>
 												<p> Hosanna al rey de salvación, Hosanna  al Dios Altísimo</p>
-												<p>
+												<h5>
 													<tn>G</tn>
 													<tn>A</tn>
 													<tn>Bm</tn>
-												</p>
+												</h5>
 												<p> Hosanna,  Jesucristo, Jesucristo es rey</p>
 											</div>
 										</div>
 									</div>
 								</div>
-								<div class="col-6">
-									<div class="card text-dark bg-light  mb-3">
+								<div class="col-lg-6">
+									<div class="card text-dark bg-light mb-3">
 										<div class="card-header" style="bottom: 3em;">Solo</div>
 										<div class="card-body text-secondary">
 											<div class="card-text">
-												<p><tn>G</tn>&nbsp;<tn>A</tn>&nbsp;<tn>G</tn><tn>A</tn><tn>Bm</tn><tn>C#m</tn></p>
+												<h5><tn>G</tn>&nbsp;<tn>A</tn>&nbsp;<tn>G</tn><tn>A</tn><tn>Bm</tn><tn>C#m</tn></h5>
 											</div>
 										</div>
 									</div>
 								</div><!--  -->
-								<div class="col-6">
-									<div class="card text-dark bg-light  mb-3">
+								<div class="col-lg-6">
+									<div class="card text-dark bg-light mb-3">
 										<div class="card-header" style="bottom: 4.6em;">Puente</div>
 										<div class="card-body text-secondary">
 											<div class="card-text">
-												<p><tn>G</tn>&nbsp;<tn>A</tn>&nbsp;<tn>G</tn><tn>A</tn><tn>Bm</tn><tn>C#m</tn></p>
+												<h5><tn>G</tn>&nbsp;<tn>A</tn>&nbsp;<tn>G</tn><tn>A</tn><tn>Bm</tn><tn>C#m</tn></h5>
 												<p>    Hosanna    &nbsp;  Hosanna     &nbsp;  Hosanna   al rey </p>
 											</div>
 										</div>
@@ -222,7 +218,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="modal-footer">						
+					<div class="modal-footer d-none">						
 						<button type="button" class="btn btn-secondary text-white me-auto">PREV</button>
 						<button type="button" class="btn btn-secondary text-white">NEXT</button>
 					</div>
@@ -230,16 +226,41 @@
 			</div>
 		</div>
 
-		<!-- Modal Song -->
-		<div class="contButtons">
-			<button type="button" class="btn btn-success btn-lg" href="#" data-bs-backdrop="static"
-				data-bs-keyboard="false" data-bs-toggle="modal" data-bs-target="#modalSong"><i class="fa fa-plus"
-					aria-hidden="true"></i></button>
-		</div>
+		<!-- Modal Song -->		
 	</header>
-	<main class="container mt-4">
+	<main class="container-fluid mt-4">
 		<section class="row">
 			<div class="tableContent">
+				<table class="table table-sm">
+					<thead>
+						<tr class="text-center">
+							<th>Nombre</th>
+							<th>Met?</th>
+							<th>BPM</th>
+							<th>Tono</th>
+							<th>Tocar</th>
+							<th>Agregar</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr class="text-center">	
+							<td>Hosanna</td>
+							<td><i class="fa fa-check text-success"></i></td>
+							<td>146</td>
+							<td>Bm</td>
+							<td><button data-bs-backdrop="static" data-bs-keyboard="false" data-bs-toggle="modal" data-bs-target="#modalSong" class="btn-play btn btn-sm btn-success text-white"><i class="fa fa-play"></i></button></td>
+							<td><button data-bs-backdrop="static" data-bs-keyboard="false" data-bs-toggle="modal" data-bs-target="#modalSong" class="btn-play btn btn-sm btn-warning"><i class="fa fa-plus"></i></button></td>
+						</tr>
+						<tr class="text-center">	
+							<td>Al que es digno</td>
+							<td><i class="fa fa-check text-success"></i></td>
+							<td>-</td>
+							<td>Bm</td>
+							<td><button data-bs-backdrop="static" data-bs-keyboard="false" data-bs-toggle="modal" data-bs-target="#modalSong" class="btn-play btn btn-sm btn-success text-white"><i class="fa fa-play"></i></button></td>
+							<td><button data-bs-backdrop="static" data-bs-keyboard="false" data-bs-toggle="modal" data-bs-target="#modalSong" class="btn-play btn btn-sm btn-warning"><i class="fa fa-plus"></i></button></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 
 		</section>
