--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			</ul>
 		</nav>
 		<!-- Modal Song -->
-		<div class="modal" id="modalSong" tabindex="-1">
+		<div class="modal fade" id="modalSong" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
 			<div class="modal-dialog modal-fullscreen-xxl-down modal-xl">
 			<!-- <div class="modal-dialog modal-fullscreen"> -->
 				<div class="modal-content">
